--- a/InventarioPro/Client/InventarioPro.Client.csproj
+++ b/InventarioPro/Client/InventarioPro.Client.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.18" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.18" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="7.15.0" />
+    <PackageReference Include="Radzen.Blazor" Version="5.5.2" />
   </ItemGroup>
 
   <ItemGroup>
