--- a/InventarioPro/Server/appsettings.json
+++ b/InventarioPro/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-636KDOT; Database=DbInventario; Trusted_Connection=True; MultipleActiveResultSets=True; TrustServerCertificate=True;"
+    "Default": "Server=DANIELMG; Database=DbInventario; Trusted_Connection=True; MultipleActiveResultSets=True; TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
