--- a/InventarioPro/Client/InventarioPro.Client.csproj
+++ b/InventarioPro/Client/InventarioPro.Client.csproj
@@ -8,9 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="CurrieTechnologies.Razor.SweetAlert2" Version="5.6.0" />
+    <PackageReference Include="EPPlus" Version="7.3.1" />
+    <PackageReference Include="itext7" Version="7.0.7" />
+    <PackageReference Include="itextsharp.pdfa" Version="5.5.13.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.18" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.18" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1" />
     <PackageReference Include="MudBlazor" Version="7.15.0" />
+    <PackageReference Include="OfficeOpenXml.Core.ExcelPackage" Version="1.0.0" />
     <PackageReference Include="Radzen.Blazor" Version="5.5.2" />
   </ItemGroup>
 
